--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -51,9 +51,17 @@
     }
 
     &__other-projects {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        display: grid; 
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
+        grid-gap: 2rem;
+        justify-items: center;
+    }
+
+    &__archive {
+        display: grid; 
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
+        grid-gap: 2rem;
+        justify-items: center;
     }
 
     &--grey {
