--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,6 +10,7 @@ html, body {
     font-size: 62.5%;
     font-family: $primary-font-family;
     background: $light-background-color;
+    overflow-x: hidden;
 }
 
 h1 {
