--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -117,18 +117,13 @@
         height: 100%;
         color: #ffffff;
         text-decoration: none;
+        position: relative;
         filter: grayscale(100%) opacity(0.7);
         transition: 200ms;
 
         @include breakpoint(desktop) {
             height: 5rem;
             justify-content: flex-start;
-        }
-        
-        &:hover {
-            filter: grayscale(0%) opacity(1);
-            background: rgba($color: #000000, $alpha: 0.5);
-            color: #ffffff;
         }
 
         & span {
@@ -142,6 +137,36 @@
                 margin: 0 3rem; 
                 width: 5%;
             }
+        }
+
+        &:hover {
+            filter: grayscale(0%) opacity(1);
+            background: rgba($color: #000000, $alpha: 0.5);
+            color: #ffffff;
+        }
+
+        &:hover::before {
+            opacity: 1;
+
+            @include breakpoint(desktop) {
+                opacity: 0;
+            }
+        }
+
+        /* Tool Tip */
+        &::before {
+            content: attr(data-tooltip);
+            bottom: 100%;
+            position: absolute;
+            background: $dark-background-color;
+            color: #ffffff;
+            border-radius: 3px;
+            padding: .5rem;
+            text-align: center;
+            opacity: 0;
+            transition: opacity .5s ease;
+            font-size: 1.2rem;
+            z-index: 1;
         }
     }
 }
