--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -24,11 +24,11 @@
     }
 
     &__content {
-        margin: 0 3rem;
         width: 100%;
 
         @include breakpoint(desktop) {
             padding: 1rem 3rem;
+            margin: 0 3rem;
         }
     }
 
@@ -38,7 +38,7 @@
 
         &-icons {
             & a > i {
-                font-size: 1.5rem;
+                font-size: 2.5rem;
                 margin: 1rem;
                 cursor: pointer;
             }
@@ -80,7 +80,7 @@
 /* Non Featured Project */
 .project {
     background: $dark-background-color;
-    color: white;
+    color: #ffffff;
     margin: 2rem 0;
     border-radius: 3px;
     padding: 2rem;
@@ -113,7 +113,6 @@
         }
 
         & i {
-
             font-size: 2rem;
 
             @include breakpoint(desktop) {
