Updated 404 page, removed blur effect, added lazy loading and netlify cms

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,6 +9,7 @@ html, body {
     width: 100%;
     font-size: 62.5%;
     font-family: $primary-font-family;
+    font-display: fallback;
     background: $light-background-color;
 }
 
