Added basic blog functionality, fixed bugs with overlay

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -27,6 +27,7 @@
         }
 
         &:hover + main > div[name="overlay-main"] {
+            visibility: visible;
             opacity: 1;
         }
 
