Added reading time, rss feed, styled blog post more

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@ Components
 @import "components/footerDrawer";
 @import "components/tag";
 @import "components/websitestats";
+@import "components/post";
 
 /*****
 Page Specific Styles
