Removed smooth scroll for native solution, style changes for mobile

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -87,6 +87,7 @@
         @include breakpoint(desktop) {
             height: initial;
             justify-content: flex-start;
+            padding: 0 3px;
         }
 
         & a {
@@ -135,6 +136,8 @@
 
         & i {
             font-size: 2rem;
+            position: absolute;
+            top: 10px;
             
             @include breakpoint(desktop) {
                 margin: 0 3rem; 
@@ -159,16 +162,16 @@
         /* Tool Tip */
         &::before {
             content: attr(data-tooltip);
-            bottom: 100%;
+            bottom: 0%;
             position: absolute;
-            background: $dark-background-color;
+            // background: $dark-background-color;
             color: #ffffff;
             border-radius: 3px;
             padding: .5rem;
             text-align: center;
-            opacity: 0;
+            // opacity: 0;
             transition: opacity .5s ease;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             z-index: 1;
         }
     }
