Added disqus comments and code block copying

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,7 @@ Components
 @import "components/tag";
 @import "components/websitestats";
 @import "components/post";
+@import "components/code";
 
 /*****
 Page Specific Styles
