--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -11,6 +11,7 @@ html, body {
     font-family: $primary-font-family;
     font-display: fallback;
     background: $light-background-color;
+    scroll-behavior: smooth;
 }
 
 h1 {
@@ -28,11 +29,6 @@ p {
 
 img {
     width: 100%;
-}
-
-.ais-Highlight-highlighted {
-    background: #13315C;
-    color: #ffffff;
 }
 
 main {
